--- a/config.json
+++ b/config.json
@@ -33,7 +33,7 @@
         { "name" : "adapt_core" },
         { "name" : "adapt_media" },
         { "name" : "adapt_wysiwyg" },
-        { "name" : "adapt_permissions" },
+        { "name" : "adapt_permissions" }
       ],
       "projects" : [],
       "submodules" : []
