--- a/config.json
+++ b/config.json
@@ -1,13 +1,13 @@
 {
   "git" : {
-    "remote" : "git@githost:/data/git",
+    "remote" : "git@githost:/data/git/drupal",
     "local"  : "/tmp/git"
   },
   "domains" : {
     "local_prefix" : "loc.",
     "local_suffix" : "",
     "stage_prefix" : "",
-    "stage_suffix" : ".stage.cd.adapt.dk"
+    "stage_suffix" : ".fe.test.cd.adapt.dk"
   },
   "modules" : {
     "default" : {
