--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
   "git" : {
-    "remote" : "git@githost:/data/git/drupal",
-    "local"  : "/tmp/git"
+    "platform" : "git@githost:/data/git/drupal",
+    "local"  : "/tmp/git",
+    "profile" : "git@github.com:adaptdk"
   },
   "domains" : {
     "local_prefix" : "loc.",
