Various clean ups of scaffold theme

--- a/templates/theme/.gitignore
+++ b/templates/theme/.gitignore
@@ -1,6 +1,18 @@
+# osx
 .DS_Store
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
+
+# sass
 .sass-cache/
+*.css.map
+
+# npm
+.npm/node_modules
+node_modules
+
+# runtime data
+pids
+*.pid
