--- a/templates/theme/package.json
+++ b/templates/theme/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "watch": "./scss.sh"
+    "watch": "node-sass --include-path node_modules/node-bourbon/node_modules/bourbon/app/assets/stylesheets --include-path node_modules/node-neat/node_modules/bourbon-neat/app/assets/stylesheets -w --source-map true scss/ -o css"
   },
   "author": "adapt @ adapt.dk"
 }
