Updated paths for sass and css folder

--- a/templates/theme/.npm/package.json
+++ b/templates/theme/.npm/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "watch": "node-sass --include-path node_modules/node-bourbon/node_modules/bourbon/app/assets/stylesheets --include-path node_modules/node-neat/node_modules/bourbon-neat/app/assets/stylesheets -w --source-map true sass/ -o css"
+    "watch": "node-sass --include-path node_modules/node-bourbon/node_modules/bourbon/app/assets/stylesheets --include-path node_modules/node-neat/node_modules/bourbon-neat/app/assets/stylesheets -w --source-map true ../sass/ -o ../css"
   },
   "author": "adapt @ adapt.dk"
 }
