--- a/templates/theme/.npm/package.json
+++ b/templates/theme/.npm/package.json
@@ -10,7 +10,10 @@
   },
   "devDependencies": {},
   "scripts": {
-    "watch": "node-sass --include-path node_modules/node-bourbon/node_modules/bourbon/app/assets/stylesheets --include-path node_modules/node-neat/node_modules/bourbon-neat/app/assets/stylesheets -w --source-map true ../sass/ -o ../css"
+    "build": "node-sass --include-path node_modules/node-bourbon/node_modules/bourbon/app/assets/stylesheets --include-path node_modules/node-neat/node_modules/bourbon-neat/app/assets/stylesheets --source-map true ../sass/ -o ../css",
+    "postinstall": "npm run build",
+    "start": "npm run watch",
+    "watch": "npm run build && npm run build -- -w"
   },
   "author": "adapt @ adapt.dk"
 }
