--- a/templates/theme/.npm/package.json
+++ b/templates/theme/.npm/package.json
@@ -6,14 +6,18 @@
     "node-bourbon": "*",
     "node-neat": "*",
     "node-sass": "*",
-    "normalize.css": "3.0.3"
+    "normalize.css": "3.0.3",
+    "npmlog": "1.2.1",
+    "svg2favicons": "1.0.1"
   },
   "devDependencies": {},
   "scripts": {
-    "build": "node-sass --include-path node_modules/node-bourbon/node_modules/bourbon/app/assets/stylesheets --include-path node_modules/node-neat/node_modules/bourbon-neat/app/assets/stylesheets --source-map true ../sass/ -o ../css",
+    "build": "npm run build:css && npm run build:favicons",
+    "build:css": "node-sass --include-path node_modules/node-bourbon/node_modules/bourbon/app/assets/stylesheets --include-path node_modules/node-neat/node_modules/bourbon-neat/app/assets/stylesheets --source-map true ../sass/ -o ../css",
+    "build:favicons": "node build-favicons.js",
     "postinstall": "npm run build",
     "start": "npm run watch",
-    "watch": "npm run build && npm run build -- -w"
+    "watch": "npm run build && npm run build:css -- -w"
   },
   "author": "adapt @ adapt.dk"
 }
